# herzen-programming-07-theme01-lr04

./: .editorconfig  .gitignore  README.md  pyproject.toml
analytics/: filters.py  serializers.py  urls.py  views.py
polls/: forms.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: base.html  home.html  survey_create.html  survey_detail.html  survey_results.html  survey_vote.html
polls_project/: asgi.py  settings.py  urls.py  wsgi.py
