[project]
name = "herzen-programming-07-theme01-lr04"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolay Grozdov",email = "grozdovnikolay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "django-allauth (>=65.8.0,<66.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "jwt (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
